--- a/api/api.csproj
+++ b/api/api.csproj
@@ -8,12 +8,19 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="Models\DTOs\" />
+    <Folder Include="Persistence\Contexts\" />
+    <Folder Include="Models\Junctions\" />
+    <Folder Include="Persistence\Repositories\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
