updated some settings

--- a/api/api.csproj
+++ b/api/api.csproj
@@ -14,12 +14,17 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\DTOs\" />
-    <Folder Include="Persistence\Contexts\" />
+    <Folder Include="Logic\" />
+    <Folder Include="Models\Contexts\" />
     <Folder Include="Models\Junctions\" />
+    <Folder Include="Persistence\Seeds\" />
     <Folder Include="Persistence\Repositories\" />
     <Folder Include="Services\" />
   </ItemGroup>
